--- a/vignettes/simulation.Rmd
+++ b/vignettes/simulation.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Simulating the consequences of unobserved confounding in the CLPM"
+title: "A Brief Overview of Simulation in the crossLag Package"
 author: "Christopher Weber"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{A Brief Overview of Simulation in the crossLag Package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -19,11 +19,44 @@ suppressMessages(library(haven))
 suppressMessages(library(dagitty))
 suppressMessages(library(ggdag))
 suppressMessages(library(ggplot2))
+suppressMessages(library(ggridges))
+suppressMessages(library(gganimate))
+
 ```
+
+## The Cross Lagged Panel Model
+
+The CLPM is common in many social science applications, particularly in longitudinal, observational research designs.
+
+The design is straightforward, motivated by the difficulty in figuring out whether $X \rightarrow Y$, $Y \rightarrow X$. It's also a common design in practice (Federico and Gole De Zavala 2023; Craemer 2008; Claasen 2008; Hatemi, Crabtree and Smith 2019; Hetherington and Globeti 2002; Luttig 2021, Klandermans 2004; Lupu 2015; Goren and Chapp 2017; Layman and Carsey 2002; Putz 2002; Tilley, Neundor and Hobolt 2018; Sibley and Duckitt 2010, among many others)
+
+## Political Psychology Examples
+
+<div style="font-size: 0.7em;">
+
+| Reference | Description |
+|---------------------------------|---------------------------------------|
+| Bakker, Lelkes and Malka (2021) | Politics and personality reciprocal effects |
+| Brandt, Wetherell, and Henry (2015) | Income/SES predicts trust |
+| Claibourn and Martin (2000) | Joining groups increases interpersonal trust |
+| Campbell, Layman, Green and Sumaktoyo (2018) | Religion is endogenous to party |
+| Carsey and Layman (2006) | Party attachment and ideology |
+| Claasen (2008) | Party identification and campaign participation |
+| Federico and Gole De Zavala (2023) | Collective narcissism and nationalism |
+| Goren and Chapp (2017) | Culture war attitudes predict religion and partisan affiliation |
+| Hetherington and Globetti (2002) | Trust predicts preferences for spending (among Whites) |
+| Luttig (2021) | Authoritarianism is endogenous to party |
+| Sibley and Duckitt (2010) | SDO, RWA |
+
+</div>
+
 
 Yet, it is not uncommon for researchers to use statistical techniques to identify causal mechanisms, occasionally with very little theorizing about the data generating process. One such statistical technique is the cross-lagged panel model (CLPM). The CLPM is a variant of the Autoregressive Distributed Lag model used in econometrics, and the identified causal mechanism is a particular type of causality, Granger Causality. The reasoning is both simple and elegant. The notion is that if one measures $x$ at time $t-1$ and $t$, and $y$ at time $t-1$ and $t$, then one estimates a model that predicts $y_{t}$ from $x_{t-1}$ and $y_{t-1}$, and an additional model where $x_{t}$ is predicted from $y_{t-1}$ and $x_{t-1}$. The temporal ordering of the data is then used to identify causal relationships. Although one may not be able to manipulate $x$ and $t$ -- to rule out spurious relationships -- if $x$ measured in the past predicts $y$ in the present, but $y$ measured in the past doesn't predict $x$ in the present, one can be reasonably certain that the causal ordering is such that $x$ affects $y$ and $y$ does not affect $x$. Graphically, the model can be represented as a Directed Acyclic Graph (DAG, Pearl 2001).
 
 ```{r, fig.width=6, fig.height=4, out.width="40%"}
+library(dagitty)
+library(ggdag)
+library(ggplot2)
 options(repr.plot.width = 2, repr.plot.height = 2)  # Set smaller plot size
 g <- dagitty("dag {
     X1 -> Y2 
@@ -40,211 +73,295 @@ ggdag(g, text = TRUE) + theme_dag() + ggtitle("Figure 1: The Cross-Lagged Regres
 
 The CLPM is a variant of the Autoregressive Distributed Lag model used in econometrics, and the causal mechanism identified is often referred to as Granger Causality. Granger causality is a concept that means that if $x$ measured at time $t-1$ predicts $y$ at time $t$, then $x$ Granger causes $y$. The CLPM can be written as
 
-```{=tex}
-\begin{eqnarray}
+$$
 y_{t=2, i}=a_0 + a_1 y_{t=1, i} + a_2 x_{t=1, i} + e_{1,i} \hspace{1in} (1)\\
 
 x_{t=2, i}=b_0 + b_1 y_{t=1, i} + b_2 x_{t=1, i} + e_{2,i} \hspace{1in} (2)\\
-\end{eqnarray}
-```
+$$
+
+
 The conclusions from the CLPM attempts to leverage the temporal order in which variables are observed. If one were to estimate these two equations using traditional regression techniques, a large $a_2$ coefficient represents a causal relationship from $x_1\rightarrow y_2$; whereas a large $b_2$ coefficient translates to reversed effect, i.e., $y_1 \rightarrow x_2$. If $a_2$ is large and $b_2$ is effectively zero, it is tempting to conclude that $x$ causes $y$ but $y$ does not cause $x$. In both cases, we include the lagged value of the dependent variable, $y_{t-1, i}$ and $x_{t-1, i}$, to control for the effect of the dependent variable; each unit serves as their own control, or baseline. Should $a_2$ or $b_2$ reach conventional levels of statistical significance, it is tempting to conclude that a causal effect has been identified. Economists refer to this as Granger Causality, which is a statistical test of whether the lagged value of the independent variable can predict the dependent variable after controlling for the lagged value of the dependent variable.
 
 While the reasoning is simple, rather strong assumptions about the data generating process must be made.. There several issues that arise upon estimating this model. The first pertains to the empirical consequence of including a lagged realization of the independent variable in the regression model, rather than contemporaneous effects; the the second issue pertains to inclusion of a lagged dependent variable (Allison 1990); and the third revolves around the identification of causal effects, particularly when there are unobserved confounders and stable unit effects.
 
-## Contemporaneous and Lagged Effects
+## Political Psychology, Personality and Politics
 
-A notoriously difficult issue with observational cross-section data is the identification of causal effects. The conditional effect of $x$ on $y$ $x \rightarrow y$ even in the most carefully specified model, using sophisticated regression techniques will rarely allow one to rule out the possibility that an effect is spurious. This is because the researcher cannot control for all possible confounders.
-
-It is tempting to draw upon panel data in these circumstances. The researcher may then include a lag of the indepedendent variable, empirically sidestepping the thorny issue of trying to identify the contemporaneous effect of $x$ on $y$. While the **contemporaneous causal** effect cannot be reliably estimated because it is likely confounded by unobservable variables. It is tempting to leverage the temporal nature of the data to estimate a lagged causal effect in place of the contemporaneous causal effect.
-
-Such reasoning is relatively commom in the social sciences, dating back to the pioneering work of Campbell (1963) as well as Campbell and Stanley (1963). The publication of Finkel's (1995) Sage monograph further popularized the technique. It is commonly used and referenced in empirical work, including that of the authors of this paper, on more than one occasion. For instance, Weber and Federico examine how authoritarianism stems from anxious and avoidant psychological attachment patterns. In defense of their findings, they write:
+As an example, let'se focus here primarily on its applicability in political psychology, exploring the relationship between  **Personality and Politics** (Luttig 2021; Bakker, Lelkes, and Malke 2021). It's common to use the CLPM in these settings, or propose doing so. Weber and Federico (2007) note,
 
 > Although we assume that general psychological orientations like anxiety and avoidance should be causally prior to worldviews and ideology—like other researchers in this area (e.g., Jost et al., 2003)—longitudinal data would provide a less-ambiguous pattern of support for this assumption. For example, panel data on all relevant constructs would allow us to examine the strength of competing causal patterns using a cross-lagged design (Finkel, 1995). Similarly, actual developmental data might allow us to see whether attachment patterns early in life are predictive of different worldviews and ideologies later on.
 
-Yet, Bellamare et al (2017) notes that a lagged realization of the independent variable does not necessarily improve one's ability to identify a causal effect. Instead, it sidesteps the problem, moving from the identification of a contemporaneous causal effect to identifying a lagged causal effect. Unfortunately, the ordering of observations does not immediately improve one's ability to identify a causal relationship, except in restrictive circumstances.
+## Complicated Effects
 
-In particular, focusing on the lag of x moves the problem to identifying a lagged causal effect, effectively ignoring causal mechanisms that operate contemporaneously. This can be theoretically or empirically problematic. Theoretically, it is difficult to defend the notion that only a lagged, rather than contemporary, realization of the independent variable causally flows to the dependent variable. Empirically, failing to include contemporaneous independent variables in equations 1 and 2 will distort the estimated effect of the lagged independent variable on the dependent variable. The regression model may be be misspeficied, and the estimated coefficients subsequently biased.
+$$
+      y_{t, i}=a_0 + a_1 y_{t-1, i} + a_2 x_{t-1, i} + e_{1,i} \\
+      x_{t, i}=b_0 + b_1 y_{t-1, i} + b_2 x_{t-1, i} + e_{2,i}
+$$
 
-Likewise, the inclusion of a lagged dependent variable is also problematic, for reasons well-documented in the literature (see Allison 1990). Introductory statistics textbooks present it in the context of autocorrelation, whereby including a lagged realization of the dependent variable will correlate with the error terms in equations (1) and (2), subsequently biasing parameter estimates and standard errors.
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.width=10, fig.height=10}
+library(gganimate)
+# Define the nodes for the SEM with three waves (two rows and three columns)
+nodes <- data.frame(
+  node = 1:6,
+  label = c("X1", "Y1", "X2", "Y2", "X3", "Y3"),
+  x = c(1, 1, 2, 2, 3, 3),
+  y = c(2, 1, 2, 1, 2, 1)
+)
 
-### The DAG
+# Define the edges for the SEM
+edges <- data.frame(
+  from = c(1, 1, 2, 2, 3, 3, 4, 4),
+  to =   c(3, 4, 3, 4, 5, 6, 5, 6)
+)
 
-Identitying causal effects with observational data is difficult due to the presence of confounding variables. The problem is not limited to cross-sectional data, and also apply to observational panel data (though occasionally for different reasons). Consider the causal diagram in Figure 2, a slight modification on the CLR model presented in Figure 1. In this case, we have added a confounder set $U$ that is correlated with both $x_1$ and $y_1$, as well as $x_2$ and $y_2$.
-
-```{r, fig.width=6, fig.height=4, out.width="40%"}
-g <- dagitty("dag {
-    X1 -> Y2 
-    Y1 -> Y2
-    X1 -> X2 
-    Y1 -> X2
-    U -> X1
-    U -> Y1
-    U -> X2
-    U -> Y2
-    U <-> U
-}")
-coordinates(g) <- list(
-    x=c( Y1=1,X1=1,Y2=2,X2=2, U=1.5),
-    y=c( Y1=1,X1=2,Y2=1,X2=2, U=2.4) )
-ggdag(g, text = TRUE) + theme_dag() + ggtitle("Figure 2: The Cross-Lagged Regression (CLR) Model.\nConfounding by U")
-```
-
-In this case, the confounder set creates a "backdoor path" from U to $x_2$ and $y_2$ through $x_1$ and $y_1$. Ignoring the confounder set $U$ will bias the estimates of the coefficients estimated in the model; this is the notion of "spurious regression" whereby we may even estimate a relationship when none exist.The solution advocated in most textbooks is to include the confounder set $U$ in one's regression model. This is also known as "back-door adjustment" as we condition on this confounder set blocking any paths that run through $U$. This is reason researchers often include a set of control variables, occasionally an unwieldy set, a "kitchen sink" of numerous variables that may or may not be controls (King, 20??).
-
-The figure below demonstrates that including the confounder set $U$ blocks the backdoor path from $x_2$ to $y_2$ through $x_1$ and $y_1$.
-
-```{r, fig.width=6, fig.height=4, out.width="40%"}
-
-ggdag_adjustment_set(g, exposure = "Y1", outcome = "Y2", shadow = "TRUE") + theme_dag() + ggtitle("Figure 3: We need to condition on:")
-
-```
-
-What if -- in addition to the counfounder set -- there exists contemporaneous effects, such as, $x_1$ \rightarrow $y_2$ and $x_2$ \rightarrow $y_2$? Now the causal diagram becomes:
-
-```{r, fig.width=6, fig.height=4, out.width="40%"}
-g <- dagitty("dag {
-    X1 -> Y2 
-    X2 -> Y2 
-    Y1 -> Y2
-    X1 -> X2 
-    Y1 -> X2
-    U -> Y1
-    U -> Y2
-    X1 -> Y1
-}")
-coordinates(g) <- list(
-    x=c( Y1=1,X1=1,Y2=2,X2=2, U=1.5),
-    y=c( Y1=1,X1=2,Y2=1,X2=2, U=2.4) )
-ggdag(g, text = TRUE) + theme_dag() + ggtitle("Figure 4: The Cross-Lagged Regression (CLR) Model.\nContemporaneous Causal Effect")
-```
-
-The presence of these contemporaneous effects poses a problem for two reasons. First, $x_1 \rightarrow x_2 \rightarrow y_2$, where $x_2$ mediates the effect of $x_1$ on $y_2$. What is more, $y_1$ also serves a mediator for this effect. These effects are omitted from the CLPM as specified above. However, if such a relationship exists, including $y_1$ -- the lag of y, which we have done above -- is also problematic. The reason is that $y_1$ is a "collider." Conditioning on $y_1$ -- the lag -- will open several backdoor paths that will bias the estimated coefficients. In. this case, $y_1$ opens up backdoor paths whereby the effect of $y_1$ represents a potentially true effect plus indirect paths where the independent variable and the unobserved confounder affects $y_2$. Because of this "collider bias" (Pearl 2001), one might be better served by excluding $y_1$ from the estimated equation, adopting a simpler model, $y_2 = \beta_1 x_1 + \epsilon$.
-
-## Simulate Data
-
-```{=tex}
-\begin{eqnarray}
-E(Y^{X1=1} - Y^{X1=0} ) = E_{Z, U} [E(Y|X1=0, Z, U) - [E(Y|X1=0, Z, U)] = c_2\\
-& E_{Z} [E(Y|X1=0, Z) - [E(Y|X1=0, Z)] = c_2 + \\
-\end{eqnarray}
-```
-to examine some of this, let's simulated some data, using the package "CrossLag" -- which includes a simulation function "simulate_observed_clr."
-
--   *simulate_observed_clr*: Simulate data for a cross-lagged panel model
--   Vary cross lag, stability, waves, and contemporaneous effects
-
-```{r}
-devtools::install_github("crweber9874/crossLag")
-library(dplyr)
-library(lavaan)
-library(crossLag)
-library(ggplot2)
-library(tibble)
-simulate_observed_clr(waves = 2, sample.nobs = 2, 
-                      stability.x = 0.75, stability.y = 0.75, 
-                      contemporaneous.x = 0.5, cross.x = 0.5, 
-                      beta.z = 0.5, beta.u = 0.5, 
-                      var.y = 1, var.x = 1, 
-                      cov.xy = 0.5, cov.uz = 0.5)
-
-```
-
-The function returns a list, the first element is the lavaan model syntax used to generate the data. The second is the data itself. This allows us to make necessary modifications to the model, which can be applied to the data.
-
-```{r}
-example_data <- simulate_observed_clr(waves = 3, sample.nobs = 100)
-# Fit lavaan model
-fit <- sem(example_data$model, data = example_data$data)
-summary(fit, fit.measures=TRUE, standardized=TRUE, rsquare=TRUE)
-```
-
-Let's start by simulating a 2 wave panel with 100 observations. Vary the following :
-
--   The effect of the unobserved confounder on the observed variables. [-0.8, 0.8]
-
-```{r, fig.width=6, fig.height=6, echo = FALSE, warning = FALSE, message = FALSE}
-
-  ggtheme =
-  theme(
-  plot.title =  ggplot2::element_text(face = "bold", hjust = 0, vjust = 0, colour = "#3C3C3C", size = 20),
-  axis.text.x = ggplot2::element_text(size = 16, colour = "#535353", face = "bold"),
-  axis.text.y = ggplot2::element_text(size = 16, colour = "#535353", face = "bold"),
-  axis.title =  ggplot2::element_text(size = 16, colour = "#535353", face = "bold"),
-  axis.title.y = ggplot2::element_text(size = 16, colour = "#535353", face = "bold", vjust = 1.5),
-  axis.ticks = ggplot2::element_blank(),
-  strip.text.x = ggplot2::element_text(size = 12),
-  panel.grid.major = ggplot2::element_line(colour = "#D0D0D0", size = .25),
-  panel.background = ggplot2::element_rect(fill = "white"),
-  legend.text = ggplot2::element_text(size = 12),
-  legend.title = ggplot2::element_text(size = 12) )
-
-### Simulations ###
-confounding = seq(-0.9, 0.9, by = 0.2)
-replications = 3
-coefficients = c()
-
-for(c in confounding){
-  for(r in 1:replications){
-  dat = simulate_observed_clr(waves = 2, sample.nobs = 1000,
-                      stability.x = 0.75, stability.y = 0.75,
-                      contemporaneous.x = 0, cross.x = 0.15,
-                      beta.z = 0, beta.u = c,
-                      var.y = 1, var.x = 1,
-                      cov.xy = 0.5, cov.uz = 0.5)
-  coefs = lm(y2 ~ -1 +  x1 + y1, data = dat$data)$coefficients
-  #coefs = cbind(coefs, c, r)
-  coefficients = rbind(coefficients, coefs)
-  }
+# Function to offset the arrowheads
+offset_arrow <- function(x1, y1, x2, y2, offset = 0.10) {
+  angle <- atan2(y2 - y1, x2 - x1)
+  x1_new <- x1 + offset * cos(angle)
+  y1_new <- y1 + offset * sin(angle)
+  x2_new <- x2 - offset * cos(angle)
+  y2_new <- y2 - offset * sin(angle)
+  return(data.frame(x1 = x1_new, y1 = y1_new, x2 = x2_new, y2 = y2_new))
 }
-coefficients %>% as_tibble() %>%
-  mutate(confounding = rep(confounding, each = replications)) %>%
-  ggplot(aes(x = confounding, y = x1)) +
-  geom_jitter(width = 0.02, height = 0.02, alpha = 0.3, color = "darkgrey") +
-  geom_smooth() +
-  labs(title = "Effect of unobserved confounder", x = "Unobserved confounder effect", y = "Coefficient for the cross lagged effect, x1 on y2") + ggtheme +
-  # plot a horizontal line at 0.3
-  geom_hline(yintercept = 0.15, linetype = "dashed", color = "black") +
-  # add confidence band
-# Add a label that says, "true value"
-  geom_text(aes(x = 0, y = 0.17, label = "True Value"), hjust = 0, vjust = 0, size = 5, color = "black") +
+
+# Apply the offset to the edges
+edges_offset <- do.call(rbind, apply(edges, 1, function(row) {
+  offset_arrow(nodes$x[row["from"]], nodes$y[row["from"]],
+               nodes$x[row["to"]], nodes$y[row["to"]])
+}))
+
+# Define the paths for the balls through the SEM
+path1 <- c(1, 3, 5) # X1 to X2 to Y3
+path2 <- c(1, 3, 6) # X1 to X2 to X3
+path3 <- c(1, 4, 5) # X1 to X2 to Y3
+path4 <- c(1, 4, 6) # X1 to X2 to X3
+
+path5 <- c(2, 3, 5) # X1 to X2 to Y3
+path6 <- c(2, 3, 6) # X1 to X2 to X3
+path7 <- c(2, 4, 5) # X1 to X2 to Y3
+path8 <- c(2, 4, 6) # X1 to X2 to X3
+
+
+path_df1 <- data.frame(node = path1, time = 1:length(path1), ball = "Ball 1", color = "blue")
+path_df2 <- data.frame(node = path2, time = 1:length(path2), ball = "Ball 2", color = "blue")
+path_df3 <- data.frame(node = path3, time = 1:length(path3), ball = "Ball 3", color = "red")
+path_df4 <- data.frame(node = path4, time = 1:length(path4), ball = "Ball 4", color = "red")
+
+path_df5 <- data.frame(node = path5, time = 1:length(path5), ball = "Ball 5", color = "pink")
+path_df6 <- data.frame(node = path6, time = 1:length(path6), ball = "Ball 6", color = "pink")
+path_df7 <- data.frame(node = path7, time = 1:length(path7), ball = "Ball 7", color = "lightblue")
+path_df8 <- data.frame(node = path8, time = 1:length(path8), ball = "Ball 8", color = "lightblue")
+
+
+path_df <- rbind(path_df1, path_df2, path_df3, path_df4, path_df5, path_df6, path_df7, path_df8)
+path_df <- merge(path_df, nodes, by = "node")
+
+# Create a ggplot2 plot of the SEM
+p <- ggplot() +
+  geom_segment(data = edges_offset, aes(x = x1, y = y1, xend = x2, yend = y2),
+               arrow = arrow(length = unit(0.4, "cm")), size = 1, lineend = "round") +
+  geom_point(data = nodes, aes(x = x, y = y), size = 12, shape = 21, fill = "white", color = "darkblue", stroke = 1.5) +
+  geom_text(data = nodes, aes(x = x, y = y, label = label), vjust = 0.5, hjust = 0.5) +
+  geom_point(data = path_df, aes(x = x, y = y, frame = time, color = color), size = 15, alpha = 0.35) +
+  scale_color_manual(values = c("blue", "red", "pink", "lightblue")) +
+  theme_void() + # Remove all axes and background
+  theme(panel.background = element_rect(fill = "white", color = NA)) +
+  # no legend
   theme(legend.position = "none")
+
+# Animate the balls moving through the SEM
+anim <- p + transition_time(time) + ease_aes('linear')
+anim
 ```
 
-## RI-CLPM
 
-Let's reshape the data from wide to long, using reshapeLong from the package. This is useful to structure the simulated data.
+## Simulating Data using $\texttt{monteCarloCLPMRI}
+
+Simulate five trials, of a three wave panel, with no cross lag effects, weak with person stability, and no confounding.
 
 ```{r}
-dat = simulate_observed_clr(waves = 5, 
-                      sample.nobs = 1000, 
-                      stability.x = 0.90, 
-                      stability.y = 0.90, 
-                      contemporaneous.x = 0, 
-                      cross.x = 0.15, 
-                      beta.z = 0, 
-                      beta.u = 0.5, 
-                      var.y = 1,
-                      var.x = 1, 
-                      cov.xy = 0.5, 
-                      cov.uz = 0.5)$data
+library(crossLag)
+library(dplyr)
+monteCarlo(
+    trials = 5,
+    waves = 3,
+    model = "ols",
+    data_generation = "ri-clpm",
+    within_person_stability_x = 0.1,
+    within_person_stability_y = 0.1,
+    cross_lag_x = 0,
+    cross_lag_y = 0,
+    confound = 0,
+    variance_x = 1,
+    variance_y = 1,
+    sample_size = 1000) %>% head()
+```
 
+## Fit a Cross-Lagged Panel Model
+
+Simulate data
+
+```{r}
+
+simulate_riclpm(
+         waves = 4,
+         stability.p = 0.9,
+         stability.q = 0.9,
+         cross.p = 0.1,
+         cross.q = 0.1,
+         variance.p = 1,
+         variance.q = 1,
+         cov.pq = 0.5) %>% head()
 ```
 
 ```{r}
-# Estimate lmer
-dat_long = reshape_long_sim_cr(dat)
-head(dat_long)
+dat = simulate_riclpm(
+         waves = 4,
+         stability.p = 0.9,
+         stability.q = 0.9,
+         cross.p = 0.1,
+         cross.q = 0.1,
+         variance.p = 1,
+         variance.q = 1,
+         cov.pq = 0.5)$data 
+
+dat <- dat %>% select(-omega, -kappa)
+# Fit lavaan model
+lavaan::lavaan(model_syntax_clpm(waves = 4, model_type = "ri-clpm"), data= dat) 
 ```
+
+I used the $\texttt{monteCarlo}$ simulation function to vary within person stability -- jointly -- in x and y, 1000 times.  Here are the results fixing the cross-lag effect of x on y to 0.
 
 ```{r}
-# Fit the brms model
-library(brms)
-fit = brm(y ~ -1 +  xlag + ylag + (1|id), data = dat_long)
-summary(fit)
+load("~/Dropbox/github_repos/crossLag_p/crossLag/tmp/sim_crosslag.RData")
+library(ggridges)
+riDat %>%
+  filter(within_person_stability_x == 0 ) %>%
+  ggplot(aes(x = xlag, fill = as.factor(round(within_person_stability_y, 2)), y = as.factor(round(within_person_stability_y, 2)))) +
+  geom_density_ridges2(
+    alpha = 0.25,
+    scale = 1,
+    show.legend = FALSE,
+    quantile_lines = TRUE,
+    rel_min_height = 0.01,
+    quantiles = 0.5,
+    calc_ecdf = FALSE,
+    jittered_points = TRUE,
+    position = position_points_jitter(width = 0.05, height = 0),
+    point_shape = 3,
+    point_size = 1,
+    point_color = "darkgrey",
+    point_alpha = 0.01,
+    fill = "blue",
+    color = NA  # Remove the outline
+
+  ) +
+  scale_x_continuous("", limits = c(-0.25, 0.25)) +
+  scale_y_discrete("") +
+  theme_minimal()  +
+  # Draw a vertical line at 0 that is dashed, use abline
+  geom_vline(xintercept = 0, linetype = "dashed", color = "black") +
+  geom_hline(yintercept = 3, linetype = "dashed", color = "black") +
+  annotate("text", x = 0, y = 3, label = "True Value ", hjust = 0) +
+  ggtitle("Simulations varying the stability of Y across waves") +
+  # Style the plot
+  theme(
+    plot.title = element_text(size = 20, face = "bold"),
+    axis.title = element_text(size = 15, face = "bold"),
+    axis.text = element_text(size = 12),
+    legend.title = element_text(size = 15, face = "bold"),
+    legend.text = element_text(size = 12)
+  )
 ```
 
-Obviously this is quite a bit different from the true parameter values. The stability coefficient should be 0.9; the cross-lag should be 0.15. Matters are substantially more problematic when the contemporaneous effect is present in the DGP. Again, this opens a colliding path for $y$ biasing the coefficients.
+And here is the effect when $y$ is unstable, but we vary $x$.
 
-\`\`\`{r} dat = simulate_observed_clr(waves = 5, sample.nobs = 1000, stability.x = 0.90, stability.y = 0.90, contemporaneous.x = 0.5, cross.x = 0.15, beta.z = 0, beta.u = 0.5, var.y = 1, var.x = 1, cov.xy = 0.5, cov.uz = 0.5)\$data
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
+load("~/Dropbox/github_repos/crossLag_p/crossLag/tmp/sim_crosslag.RData")
+library(ggridges)
+riDat %>%
+  filter(within_person_stability_y == 0 ) %>%
+  ggplot(aes(x = xlag, fill = as.factor(round(within_person_stability_x, 2)), y = as.factor(round(within_person_stability_x, 2)))) +
+  geom_density_ridges2(
+    alpha = 0.25,
+    scale = 1,
+    show.legend = FALSE,
+    quantile_lines = TRUE,
+    rel_min_height = 0.01,
+    quantiles = 0.5,
+    calc_ecdf = FALSE,
+    jittered_points = TRUE,
+    position = position_points_jitter(width = 0.05, height = 0),
+    point_shape = 3,
+    point_size = 1,
+    point_color = "darkgrey",
+    point_alpha = 0.01,
+    fill = "blue",
+    color = NA  # Remove the outline
 
-dat_long = reshape_long_sim_cr(dat) brm(y \~ -1 + xlag + ylag + (1\|id), data = dat_long)
+  ) +
+  scale_x_continuous("", limits = c(-0.25, 0.25)) +
+  scale_y_discrete("") +
+  theme_minimal()  +
+  # Draw a vertical line at 0 that is dashed, use abline
+  geom_vline(xintercept = 0, linetype = "dashed", color = "black") +
+  geom_hline(yintercept = 3, linetype = "dashed", color = "black") +
+  annotate("text", x = 0, y = 3, label = "True Value ", hjust = 0) +
+  ggtitle("Simulations varying the stability of X across waves") +
+  # Style the plot
+  theme(
+    plot.title = element_text(size = 20, face = "bold"),
+    axis.title = element_text(size = 15, face = "bold"),
+    axis.text = element_text(size = 12),
+    legend.title = element_text(size = 15, face = "bold"),
+    legend.text = element_text(size = 12)
+  )
+```
+
+To examine them jointly, the following animation moves between autocorrelation in the two variables.
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
+library(gganimate)
+p = riDat %>%
+  ggplot(aes(x = xlag, fill = as.factor(round(within_person_stability_x, 2)), y = as.factor(round(within_person_stability_x, 2)))) +
+  geom_density_ridges2(
+    alpha = 0.25,
+    scale = 1,
+    show.legend = FALSE,
+    quantile_lines = TRUE,
+    rel_min_height = 0.01,
+    quantiles = 0.5,
+    calc_ecdf = FALSE,
+    jittered_points = TRUE,
+    position = position_points_jitter(width = 0.05, height = 0),
+    point_shape = 3,
+    point_size = 1,
+    point_color = "darkgrey",
+    point_alpha = 0.01,
+    fill = "blue",
+    color = NA  # Remove the outline
+
+  ) +
+  scale_x_continuous("Stability in X", limits = c(-0.25, 0.25)) +
+  scale_y_discrete("") +
+  theme_minimal()  +
+  # Draw a vertical line at 0 that is dashed, use abline
+  geom_vline(xintercept = 0, linetype = "dashed", color = "black") +
+  geom_hline(yintercept = 3, linetype = "dashed", color = "black") +
+  annotate("text", x = 0, y = 3, label = "True Value ", hjust = 0) +
+  ggtitle("Simulations varying within-person, stability") +
+  # Style the plot
+  theme(
+    plot.title = element_text(size = 20, face = "bold"),
+    axis.title = element_text(size = 15, face = "bold"),
+    axis.text = element_text(size = 12),
+    legend.title = element_text(size = 15, face = "bold"),
+    legend.text = element_text(size = 12)
+  ) +
+ transition_states(within_person_stability_y) +
+      ease_aes('linear') +
+  labs(title = "Within-person stability in y: {closest_state}") +
+  shadow_mark(alpha = 0.15)
+animate(p)
+
+```
+
